# prj-gen

./: .gitignore  README.md  pyproject.toml  test.py
src/prj_gen/: common.py  generator.py  template.py  user_input.py  userinput.py
template/: prj.toml
template/hook/: hook.py  pre.py
template/prj/nono/: README.md  gitignore  {#spcl.txt#}.txt
tests/: check_exclude.py  extract.py  run.py
