[project]
name = "prj-gen"
version = "0.1.0"
description = ""
authors = [{ name = "Khan Kibria", email = "khan.kibria@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
dependencies = [
    "prompt-toolkit>=3.0.43,<4",
    "jinja2>=3.1.3,<4",
    "toml>=0.10.2,<0.11",
    "requests-cache>=1.2.0,<2",
]

[dependency-groups]
dev = ["pytest>=8.1.1,<9"]

[tool.hatch.build.targets.sdist]
include = ["src/prj_gen"]

[tool.hatch.build.targets.wheel]
include = ["src/prj_gen"]

[tool.hatch.build.targets.wheel.sources]
"src/prj_gen" = "prj_gen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
